# support-glitch-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
app/: main.py  settings.py  sqlite.db
app/consumers/: handlers.py  main.py  schemas.py
app/containers/: factories.py  providers.py
app/exceptions/: base.py  chats.py
app/handlers/: base.py  chats.py  errors.py
app/handlers/converters/: chats.py
app/repositories/: initialize.py  sqls.py
app/repositories/chats/: base.py
app/repositories/chats.py/: base.py
app/services/: chats.py  constants.py  web.py
app/services/converters/: chats.py
docker_compose/: bot.yaml  consumer.yaml
